style.css
@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playwrite+CL:wght@100..400&family=Rubik:ital,wght@0,300..900;1,300..900&family=VT323&family=Zain:wght@200;300;400;700;800;900&display=swap");

*,
.vt323font {
  font-family: "VT323", monospace;
  font-weight: 400;
  font-style: normal;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
  padding: 0;
  margin: 0;
}

a,
p {
  font-size: 1.3rem;
}

body {
  background-color: #ddd;
}

a,
a:visited {
  color: #555;
  text-decoration: underline;
}

ul {
  margin: 0;
  padding-inline-start: 20px;
  list-style-type: square;
}

nav,
.window-titlebar {
  border-bottom: 1px solid black;
  padding: 0 1.5rem;
  background-color: white;
}

nav a,
nav a:visited {
  font-family: "VT323", monospace;
  font-weight: 400;
  font-style: normal;
  font-size: 1.5rem;
  color: black;
  text-decoration: none;
  display: inline-flex;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

nav a:hover {
  color: white;
  background-color: black;
}

nav .menus {
  width: 80%;
  display: inline-block;
  /* background-color: yellow; */
}

nav .toolbar {
  width: 18%;
  display: inline-block;
  text-align: right;
  /* background-color: blue; */
}

.desktop {
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
}

main .window {
  border: 1px solid black;
  /* border-radius: 0.5rem; */
  margin: 20px 15px;
  box-shadow: 5px 5px black;
}

.window-titlebar p {
  text-align: center;
  font-family: "VT323", monospace;
  font-weight: 300;
  font-style: normal;
  font-size: 1.5rem;
}

.window-content {
  box-sizing: border-box;
  padding: 10px 20px;
  background-color: white;
}

.text-center {
  text-align: center;
}

